# glim

./: .gitmodules  CMakeLists.txt  README.md  config_template.hpp.in
example/: CMakeLists.txt  WindowSamplerConsumer.cpp  WindowSamplerConsumer.hpp  main.cpp
src/: fs.cpp  fs.hpp  fwd.hpp  image.cpp  image.hpp  material.cpp  material.hpp  object.cpp  object.hpp  postprocess.cpp  postprocess.hpp  ray.hpp  sampler.cpp  sampler.hpp  scene.cpp  scene.hpp  task_queue.hpp
test/: CMakeLists.txt  image.cpp  ray.cpp
